--- a/style.css
+++ b/style.css
@@ -19,8 +19,13 @@ header{
     padding-bottom:40px;
 
 }
+::placeholder{
+    color:rgb(255,255,255);
+    font-size: 24px;
+    font-weight: 100;
+}
 main{
-    color: rgb(238,238,238);
+    color: white;
     font-size: 24px;
 }
 .one{
@@ -31,19 +36,24 @@ div{
     padding-top: 15px;
     padding-bottom: 5px;
 }
-.two{
-    padding-top: 50px;
-    font-size: 16px;
-    color:white;
-}
+
 .main{
     background-color: black;
     text-decoration: none;
+
     
+}
+.main{
+    font-family: 'Inter', sans-serif;
 }
 #student, #employee{
     background-color: black;
     text-decoration: none;
+}
+.DOB{
+    background-color: black;
+    color: white;
+    font-family: 'Inter', sans-serif;
 }
 label{
     padding:10px;
